@@ -585,6 +585,7 @@ All:
 
 All (GUI):
 
+- Add wxEVT_MAGNIFY mouse event (Joost Nieuwenhuijse).
 - Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
 - Implement bounding box computation in wxGCDC (Toni Ruža).
 - Fix saving GIF animations with 2.5s+ delays between frames (elvissteinjr).
@@ -611,6 +612,7 @@ wxMSW:
 - Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
 - Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
 - Fix creating wxBitmap from monochrome wxIcon or wxCursor (Artur Wieczorek).
+- Fix regression in accessibility support (Leland Lucius).
 - Fix handling of bitmaps with alpha in wxImageList (Artur Wieczorek).
 - Add paragraph spacing attributes support to wxTextCtrl (dannchr).
 - Show new style directory selector even for non existent paths (raychow).
